--- a/index.html
+++ b/index.html
@@ -1,12 +1,111 @@
-<!-- hello world -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Hello World</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>许姣姣作品集</title>
+    <link rel="icon" href="favicon.ico">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+
+        h1 {
+            font-size: 36px;
+            font-weight: bold;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
+
+        .section {
+            margin-bottom: 40px;
+        }
+
+        .section h2 {
+            font-size: 30px;
+            margin-bottom: 10px;
+        }
+
+        .section h3 {
+            font-size: 24px;
+            margin-bottom: 10px;
+            color: #333;
+        }
+
+        .section p {
+            font-size: 16px;
+            line-height: 1.6;
+        }
+
+        .section award {
+            font-size: 16px;
+            color: #D6000F;
+            font-weight: bold;
+        }
+
+        .image-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .image-container img {
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <h1>许姣姣介绍</h1>
+        <div class="section">
+            <h2>作品集</h2>
+            <h3>“吟秋” 一体化家用早餐机</h3>
+            <award>米兰设计周中国高校设计学科师生优秀作品展三等奖</award>
+
+            <p> 这是一款打蛋机和面包机二合一产品，为人们提供各种简单早餐服务。
+            </p>
+            <div class="image-container">
+                <img alt="“吟秋”" src="https://www.freeimg.cn/i/2024/02/13/65cb4e0426de6.jpg">
+                <img alt="“吟秋2”" src="https://www.freeimg.cn/i/2024/02/13/65cb4e049e6b7.png">
+
+            </div>
+            <h3>“烟岚云岫” 空气净化器</h3>
+            <award>中国创意挑战大赛产品造型类二等奖</award>
+            <p>这是一款为年轻人设计的可持续理念的空气净化器。</p>
+            <h3>“晨曦” 简约几何造型除螨仪</h3>
+            <p>这是一款噪音小，吸力大，清洁干净，拆洗非常方便的家用除螨仪。
+            </p>
+            <h3>“蛋壳” 黑陶灯</h3>
+            <p>这是一款根据文物蛋壳黑陶高柄杯为原型设计的文化创意灯。作为文创产品给人们传递古老的中华文化。
+            </p>
+            <h3>“朦胧” 空气净化器</h3>
+            <p>
+                这是一款为年轻白领人群设计的小型桌面空气净化器。
+            </p>
+
+            <h3>玩具飞机</h3>
+            <p>这是一款让孩子们在快乐的游戏中开阔视野，激发想象力的玩具飞机。</p>
+
+        </div>
+        <div class="section">
+            <h2>教育背景</h2>
+            <p>您的教育背景信息在这里。</p>
+        </div>
+        <div class="section">
+            <h2>技能专长</h2>
+            <p>您的技能专长信息在这里。</p>
+        </div>
+    </div>
 </body>
 
 </html>
