--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
 
         .section h2 {
-            font-size: 30px;
+            font-size: 31px;
             margin-bottom: 10px;
         }
 
@@ -66,7 +66,7 @@
 
 <body>
     <div class="container">
-        <h1>许姣姣介绍</h1>
+        <h1>许姣姣个人介绍</h1>
         <div class="section">
             <h2>作品集</h2>
             <h3>“吟秋” 一体化家用早餐机</h3>
@@ -76,34 +76,54 @@
             </p>
             <div class="image-container">
                 <img alt="“吟秋”" src="https://www.freeimg.cn/i/2024/02/13/65cb4e0426de6.jpg">
-                <img alt="“吟秋2”" src="https://www.freeimg.cn/i/2024/02/13/65cb4e049e6b7.png">
+                <img alt="“吟秋2”" src="https://www.freeimg.cn/i/2024/02/13/65cb550f4204c.png">
 
             </div>
             <h3>“烟岚云岫” 空气净化器</h3>
             <award>中国创意挑战大赛产品造型类二等奖</award>
             <p>这是一款为年轻人设计的可持续理念的空气净化器。</p>
+            <div class="image-container">
+                <img alt="“烟岚云岫”" src="https://www.freeimg.cn/i/2024/02/13/65cb506f517bb.png">
+            </div>
             <h3>“晨曦” 简约几何造型除螨仪</h3>
             <p>这是一款噪音小，吸力大，清洁干净，拆洗非常方便的家用除螨仪。
             </p>
+            <div class="image-container">
+                <img alt="除螨仪" src="https://www.freeimg.cn/i/2024/02/13/65cb550f6fb32.png">
+            </div>
             <h3>“蛋壳” 黑陶灯</h3>
             <p>这是一款根据文物蛋壳黑陶高柄杯为原型设计的文化创意灯。作为文创产品给人们传递古老的中华文化。
             </p>
+            <div class="image-container">
+                <img alt="黑陶灯" src="https://www.freeimg.cn/i/2024/02/13/65cb550f57ec6.png">
+            </div>
             <h3>“朦胧” 空气净化器</h3>
             <p>
                 这是一款为年轻白领人群设计的小型桌面空气净化器。
             </p>
-
+            <div class="image-container">
+                <img alt="空气净化器" src="https://www.freeimg.cn/i/2024/02/13/65cb550f709d9.png">
+            </div>
             <h3>玩具飞机</h3>
             <p>这是一款让孩子们在快乐的游戏中开阔视野，激发想象力的玩具飞机。</p>
-
+            <div class="image-container">
+                <img alt="玩具飞机" src="https://www.freeimg.cn/i/2024/02/13/65cb550f64267.png">
+            </div>
         </div>
         <div class="section">
             <h2>教育背景</h2>
-            <p>您的教育背景信息在这里。</p>
+            <p><b>院校</b>：齐鲁理工学院（本科） <b>专业</b>：产品设计 <b>毕业年份</b>：2024<br>
+                <b>设计领域</b>：插画、旅游产品、电子产品、日用器皿、创意家具、家用电器<br>
+                <b>邮箱</b>：1307771322@qq.com
+            </p>
         </div>
         <div class="section">
             <h2>技能专长</h2>
-            <p>您的技能专长信息在这里。</p>
+            <p><b>擅长软件</b>：PS、CAD、Rhinoceros、KeyShot11<br>
+                <b>普通话</b>：二甲水平<br>
+                <b>领域获奖</b>：<br>🥇🥉第十一届未来设计师全国高校数字艺术设计大赛团体山东赛区一等奖和三等奖<br>🥈第十七届中国好创意山东分赛区个人二等奖<br>🥉米兰设计周师生优秀作品展山东分赛区个人三等奖
+                <br><b>其他技能</b>：熟悉常见办公软件，如word、powerpoint等
+            </p>
         </div>
     </div>
 </body>
